--- a/index.html
+++ b/index.html
@@ -40,5 +40,15 @@
     <header>Attendees</header>
     <div id="attendees"></div>
     <script src="./app.js"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("sw.js")
+          .then(registration => {
+            console.log(registration);
+          })
+          .catch(e => console.error("sw failed to register with error => ", e));
+      }
+    </script>
   </body>
 </html>
