add basic api cache

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           navigator.serviceWorker
             .register("sw.js")
             .then(console.log)
-            .catch(onsole.error);
+            .catch(console.error);
         });
       }
     </script>
